syntax = "proto3";

package numbers.v1;

import "google/protobuf/timestamp.proto";

message Station {
  int32 station_id = 1;
  google.protobuf.Timestamp created_at = 2;
}

message ListStationsRequest {
}

message ListStationsReply {
  repeated Station stations = 1;
}

message CreateStationRequest {
  optional string seed = 1;
}

message CreateStationReply {
  Station station = 1;
}

message StreamStationRequest {
  int32 station_id = 1;
}

message StreamStationReply {
  string message = 1;
}

service Numbers {
  rpc ListStations (ListStationsRequest) returns (ListStationsReply) { option idempotency_level = NO_SIDE_EFFECTS; };
  rpc CreateStation (CreateStationRequest) returns (CreateStationReply) { };
  rpc StreamStation(StreamStationRequest) returns (stream StreamStationReply) { option idempotency_level = NO_SIDE_EFFECTS; }
}
